--- a/index-2.html
+++ b/index-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from validthemes.live/themeforest/ambrox/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Feb 2023 17:47:00 GMT -->
+<!-- Mirrored from validthemes.live/themeforest/ambrox/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Feb 2023 17:47:43 GMT -->
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
@@ -1627,5 +1627,5 @@
 
 </body>
 
-<!-- Mirrored from validthemes.live/themeforest/ambrox/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Feb 2023 17:47:24 GMT -->
+<!-- Mirrored from validthemes.live/themeforest/ambrox/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Feb 2023 17:47:43 GMT -->
 </html>
